5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1674_1105.log
== TEST (2019-04-25 11:48:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a==lobo):
	print("Casa: Stark")	
elif (a==leao):
	print("Casa: Lannister")
elif (a==veado):
	print("Casa: Baratheon")
elif (a==rosa:
	print("Casa: tyrell")
elif (a==sol):
	print("Casa: Martell")
elif (a==lula):
	print("Casa: Greyjoy")
elif (a==esfolado):
	print("Casa: Bolton")
elif (a==turta):
	print("Casa: Tully")
else:
	print(("Brasao invalido"))

-- ERROR:
File "XXXX", line 12
    elif (a==rosa:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:49:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a==lobo):
	print("Casa: Stark")	
elif (a==leao):
	print("Casa: Lannister")
elif (a==veado):
	print("Casa: Baratheon")
elif (a==rosa):
	print("Casa: tyrell")
elif (a==sol):
	print("Casa: Martell")
elif (a==lula):
	print("Casa: Greyjoy")
elif (a==esfolado):
	print("Casa: Bolton")
elif (a==turta):
	print("Casa: Tully")
else:
	print(("Brasao invalido"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (a==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == lobo):
	print("Casa: Stark")	
elif (a == leao):
	print("Casa: Lannister")
elif (a == veado):
	print("Casa: Baratheon")
elif (a == rosa):
	print("Casa: tyrell")
elif (a == sol):
	print("Casa: Martell")
elif (a == lula):
	print("Casa: Greyjoy")
elif (a == esfolado):
	print("Casa: Bolton")
elif (a == turta):
	print("Casa: Tully")
else:
	print(("Brasao invalido"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (a == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:52:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == lobo):
	print("Casa: Stark")	
elif (a == leao):
	print("Casa: Lannister")
elif (a == veado):
	print("Casa: Baratheon")
elif (a == rosa):
	print("Casa: tyrell")
elif (a == sol):
	print("Casa: Martell")
elif (a == lula):
	print("Casa: Greyjoy")
elif (a == esfolado):
	print("Casa: Bolton")
elif (a == turta):
	print("Casa: Tully")
else:
	print(("Brasao invalido"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (a == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:54:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print(("Brasao invalido"))

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:54:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print(("Brasao invalido"))

-- EXECUTION TIME:
0.201862
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Brasao invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:55:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print(("Brasao invalido"))

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:56:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print(("Brasao invalido"))

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:56:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print(("Brasao invalido"))

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:58:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
elif (a == "dragao"):
	print("Casa: Targaryen")
else:
	print(("Brasao invalido"))

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:58:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
elif (a == "dragao"):
	print("Casa: Targaryen")
else:
	print(("Brasao invalido"))

-- EXECUTION TIME:
0.139354
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:22:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
elif (a == "dragao"):
	print("Casa: Targaryen")
else:
	print(("Brasao invalido"))

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:22:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
elif (a == "dragao"):
	print("Casa: Targaryen")
else:
	print(("Brasao invalido"))

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:22:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
elif (a == "dragao"):
	print("Casa: Targaryen")
else:
	print(("Brasao invalido"))

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:23:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("digite o brasao: ").lower()
print("Entrada:",a)

if (a == "lobo"):
	print("Casa: Stark")	
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a == "rosa"):
	print("Casa: tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
elif (a == "dragao"):
	print("Casa: Targaryen")
else:
	print(("Brasao invalido"))

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
